added first sucessful functio to my button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h3>HOME</h3>
         <div class="score-window">0</div>
         <div class="adding-buttons">
-          <button class="adding-button">+1</button>
+          <button class="adding-button" onClick="addNumber(1)">+1</button>
           <button class="adding-button">+2</button>
           <button class="adding-button">+3</button>
         </div>
@@ -34,6 +34,7 @@
         </div>
       </div>
     </div>
+    <button class="reset-button">RESET GAME</button>
     <script src="index.js"></script>
   </body>
 </html>
